# MarketReel

./: .env.example  AGENTS.md  README.md  docker-compose.yml  seed.txt  skills-lock.json
adk-server/: .env.example  Dockerfile  pyproject.toml
adk-server/agents/: services.py
adk-server/agents/eval/: test_eval.py
adk-server/agents/marketlogic/: agent.py  config.py  evalset2d546a.evalset.json  evalset5209f7.evalset.json  orchestrator.py  prompt_runtime.py  tools.py  types.py
adk-server/agents/marketlogic/prompts/: DataAgent_prompt.txt  DocumentRetrievalAgent_prompt.txt  MarketLogicOrchestrator_prompt.txt  RiskAgent_prompt.txt  StrategyAgent_prompt.txt  ValuationAgent_prompt.txt
adk-server/agents/marketlogic/sub_agents/: __init__.py  data_agent.py  document_retrieval_agent.py  explainability_agent.py  risk_agent.py  risk_reasoner.py  strategy_agent.py  strategy_reasoner.py  validation_checkers.py  valuation_agent.py  valuation_reasoner.py
adk-server/agents/tests/: test_agent.py
adk-server/app/: agent.py  main.py
adk-server/app/core/: config.py
adk-server/docs/censorship/json/: avengers_endgame_censorship_guidelines.json  (+9 more)
adk-server/docs/page_index/: manifest.json  pages.jsonl
adk-server/docs/scripts/: avengers_endgame.md  deadpool.md  dunkirk.md  ford_v_ferrari.md  how_to_train_your_dragon.md  inside_out.md  interstellar.md  la_la_land.md  lion_king.md  tenet.md
adk-server/docs/scripts_indexed/: manifest.json  pages.jsonl  scene_manifest.json  scenes.jsonl
adk-server/scripts/: convert_pdf_scripts.py
adk-server/tests/: test_agent_output_visibility.py  test_run.py
docs/: chat2.md  (+5 more)
server/: pyproject.toml
server/alembic/versions/: 20260310_000001_init_chat_models.py  20260311_000002_marketlogic_data_models.py
server/app/: main.py
server/app/api/: router.py
server/app/core/: config.py
server/app/db/: models.py  seed.py  seed_marketlogic.py  seed_users.json
server/app/services/: adk_client.py  chats.py  internal_market_data.py
server/scripts/: seed_marketlogic.py
server/tests/integration/: test_chats.py  test_internal_api.py
(+172 files in other folders)
